--- a/reference/部分数据格式说明.md
+++ b/reference/部分数据格式说明.md
@@ -3,7 +3,7 @@
     说明这里的边权重, 也就是城市间的距离矩阵是直接***显示给出***的, 我们应该用数据给出的, 而不要再自己计算  
 
     **EDGE_WEIGHT_FORMAT: UPPER_ROW**  
-    说明这里的距离矩阵格式时上三角矩阵, 通过对照这个矩阵长度和城市个数也不难发现  
+    说明这里的距离矩阵格式是上三角矩阵, 通过对照这个矩阵长度和城市个数也不难发现  
 
     **EDGE_WEIGHT_FORMAT: LOWER_DIAG_ROW**  
     说明这里的距离矩阵格式是包含对角线的下三角矩阵, 而对角线上显然距离都是0  
@@ -29,4 +29,5 @@
 ## MDVRP数据集  
 - https://www.bernabe.dorronsoro.es/vrp/  
 我忘记放这个数据网站了....  
-这里详细的介绍了每个数字代表的含义
+这里详细的介绍了每个数字代表的含义  
+指路:   Instances -> MDVRP -> description
